--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1,3 +1,4 @@
+
 /* Start Global */
 * {
     -webkit-box-sizing: border-box;
@@ -6,13 +7,16 @@
     padding: 0;
     margin: 0;
  }
-
+ :root {
+     --main-color:#00c7fc;
+ }
  html {
      scroll-behavior: smooth;
  }
 
  body {
     font-family: 'Open Sans', sans-serif;
+    background-color: black;
  }
 
  ul {
@@ -42,3 +46,97 @@
     }
 }
 /* End Global */
+
+/* Start Header */
+header {
+    position: absolute;
+    width: 100%;
+    left:0;
+    z-index: 2;
+}
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    min-height: 79px;
+}
+
+header .container::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  background-color: #a2a2a2;
+  width: calc(100% - 30px);
+  height: 1px;
+}
+
+header  img {
+  height: 40px;
+}
+
+header nav {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+header .toggle-menu {
+      color: white;
+      font-size: 22px;
+  }
+
+header .toggle-menu:hover + ul {
+    display: flex;
+    flex-direction: column;
+    left: 15px;
+    top: 100%;
+    position: absolute;
+} 
+header .toggle-menu:hover + ul li a {
+    padding: 15px;
+}
+@media (min-Width:768px) {
+    header .toggle-menu {
+        display: none;
+    }
+}
+header nav ul {
+    display: flex;
+}
+@media (max-Width:767px) {
+header nav ul { 
+    display: none;
+}
+}
+  header nav ul li a {
+    display: block;
+    text-decoration: none;
+    padding: 30px 10px;
+    color: white;
+    position: relative;
+    transition: 0.3s;
+  }
+  header nav ul li a.active,
+  header nav ul li a:hover { 
+    color: var(--main-color);
+    border-bottom: solid 1px var(--main-color);
+    z-index: 2;
+  }
+
+  header nav .form {
+      position: relative;
+      border-left: solid 1px white;
+      width: 40px;
+      height: 30px;
+      margin-left: 30px;
+  }
+  header nav .form i {
+      position: absolute;
+      color: white;
+      right:0;
+      top:50%;
+      transform: translateY(-50%);
+  }
+/* End Header */
